python/_sddekit.py


# /home/mw/dev/sddekit/src/sddekit.h: 1234
class struct_sd_sch(Structure):
    pass

sd_sch = struct_sd_sch # /home/mw/dev/sddekit/src/sddekit.h: 1229

struct_sd_sch.__slots__ = [
    'ptr',
    'get_nx',
    'apply',
    'free',
]
struct_sd_sch._fields_ = [
    ('ptr', POINTER(None)),
    ('get_nx', CFUNCTYPE(UNCHECKED(c_uint32), POINTER(sd_sch))),
    ('apply', CFUNCTYPE(UNCHECKED(sd_stat), POINTER(sd_sch), POINTER(sd_hist), POINTER(sd_rng), POINTER(sd_sys), c_double, c_double, c_uint32, POINTER(c_double), c_uint32, POINTER(c_double))),
    ('free', CFUNCTYPE(UNCHECKED(None), POINTER(sd_sch))),
]

# /home/mw/dev/sddekit/src/sddekit.h: 1278
if hasattr(_libs['SDDEKit'], 'sd_sch_new_cb'):
    sd_sch_new_cb = _libs['SDDEKit'].sd_sch_new_cb
    sd_sch_new_cb.argtypes = [c_uint32, POINTER(None), CFUNCTYPE(UNCHECKED(sd_stat), POINTER(None), POINTER(sd_hist), POINTER(sd_rng), POINTER(sd_sys), c_double, c_double, c_uint32, POINTER(c_double), c_uint32, POINTER(c_double))]
    sd_sch_new_cb.restype = POINTER(sd_sch)

# /home/mw/dev/sddekit/src/sddekit.h: 1298
if hasattr(_libs['SDDEKit'], 'sd_sch_new_id'):
    sd_sch_new_id = _libs['SDDEKit'].sd_sch_new_id
    sd_sch_new_id.argtypes = [c_uint32]
    sd_sch_new_id.restype = POINTER(sd_sch)

# /home/mw/dev/sddekit/src/sddekit.h: 1305
if hasattr(_libs['SDDEKit'], 'sd_sch_new_em'):
    sd_sch_new_em = _libs['SDDEKit'].sd_sch_new_em
    sd_sch_new_em.argtypes = [c_uint32]
    sd_sch_new_em.restype = POINTER(sd_sch)

# /home/mw/dev/sddekit/src/sddekit.h: 1314
if hasattr(_libs['SDDEKit'], 'sd_sch_new_emc'):
    sd_sch_new_emc = _libs['SDDEKit'].sd_sch_new_emc
    sd_sch_new_emc.argtypes = [c_uint32, c_double]
    sd_sch_new_emc.restype = POINTER(sd_sch)

# /home/mw/dev/sddekit/src/sddekit.h: 1325
for _lib in _libs.itervalues():
    if not hasattr(_lib, 'sd_sch_emcolor_get_lam'):
        continue
    sd_sch_emcolor_get_lam = _lib.sd_sch_emcolor_get_lam
    sd_sch_emcolor_get_lam.argtypes = [POINTER(sd_sch)]
    sd_sch_emcolor_get_lam.restype = c_double
    break

# /home/mw/dev/sddekit/src/sddekit.h: 1332
if hasattr(_libs['SDDEKit'], 'sd_sch_new_heun'):
    sd_sch_new_heun = _libs['SDDEKit'].sd_sch_new_heun
    sd_sch_new_heun.argtypes = [c_uint32]
    sd_sch_new_heun.restype = POINTER(sd_sch)

# /home/mw/dev/sddekit/src/sddekit.h: 1349
class struct_sd_sol(Structure):
    pass

sd_sol = struct_sd_sol # /home/mw/dev/sddekit/src/sddekit.h: 1344

struct_sd_sol.__slots__ = [
    'ptr',
    'free',
    'cont',
    'get_nx',
    'get_nce',
    'get_nca',
    'get_hist',
    'get_rng',
    'get_t',
    'get_x',
    'get_c',
]
struct_sd_sol._fields_ = [
    ('ptr', POINTER(None)),
    ('free', CFUNCTYPE(UNCHECKED(None), POINTER(sd_sol))),
    ('cont', CFUNCTYPE(UNCHECKED(sd_stat), POINTER(sd_sol))),
    ('get_nx', CFUNCTYPE(UNCHECKED(c_uint32), POINTER(sd_sol))),
    ('get_nce', CFUNCTYPE(UNCHECKED(c_uint32), POINTER(sd_sol))),
    ('get_nca', CFUNCTYPE(UNCHECKED(c_uint32), POINTER(sd_sol))),
    ('get_hist', CFUNCTYPE(UNCHECKED(POINTER(sd_hist)), POINTER(sd_sol))),
    ('get_rng', CFUNCTYPE(UNCHECKED(POINTER(sd_rng)), POINTER(sd_sol))),
    ('get_t', CFUNCTYPE(UNCHECKED(c_double), POINTER(sd_sol))),
    ('get_x', CFUNCTYPE(UNCHECKED(POINTER(c_double)), POINTER(sd_sol))),
    ('get_c', CFUNCTYPE(UNCHECKED(POINTER(c_double)), POINTER(sd_sol))),
]

# /home/mw/dev/sddekit/src/sddekit.h: 1445
if hasattr(_libs['SDDEKit'], 'sd_sol_new_default'):
    sd_sol_new_default = _libs['SDDEKit'].sd_sol_new_default
    sd_sol_new_default.argtypes = [POINTER(sd_sys), POINTER(sd_sch), POINTER(sd_out), POINTER(sd_hfill), c_uint32, c_uint32, POINTER(c_double), c_uint32, c_uint32, POINTER(c_uint32), POINTER(c_double), c_double, c_double]
    sd_sol_new_default.restype = POINTER(sd_sol)

# /home/mw/dev/sddekit/src/sddekit.h: 1480
if hasattr(_libs['SDDEKit'], 'sd_sparse_from_dense'):
    sd_sparse_from_dense = _libs['SDDEKit'].sd_sparse_from_dense
    sd_sparse_from_dense.argtypes = [c_uint32, c_uint32, POINTER(c_double), POINTER(c_double), c_double, POINTER(c_uint32), POINTER(POINTER(c_uint32)), POINTER(POINTER(c_uint32)), POINTER(POINTER(c_double)), POINTER(POINTER(c_double))]
    sd_sparse_from_dense.restype = sd_stat

sd_log_msg_fp = CFUNCTYPE(UNCHECKED(c_int), String) # /home/mw/dev/sddekit/src/sddekit.h: 1497

# /home/mw/dev/sddekit/src/sddekit.h: 1499
try:
    sd_log_msg = (sd_log_msg_fp).in_dll(_libs['SDDEKit'], 'sd_log_msg')
except:
    pass

# /home/mw/dev/sddekit/src/sddekit.h: 1504
if hasattr(_libs['SDDEKit'], 'sd_log_get_msg'):
    sd_log_get_msg = _libs['SDDEKit'].sd_log_get_msg
    sd_log_get_msg.argtypes = []
    sd_log_get_msg.restype = sd_log_msg_fp

# /home/mw/dev/sddekit/src/sddekit.h: 1509
if hasattr(_libs['SDDEKit'], 'sd_log_set_msg'):
    sd_log_set_msg = _libs['SDDEKit'].sd_log_set_msg
    sd_log_set_msg.argtypes = [sd_log_msg_fp]
    sd_log_set_msg.restype = None

# /home/mw/dev/sddekit/src/sddekit.h: 1514
if hasattr(_libs['SDDEKit'], 'sd_log_is_quiet'):
    sd_log_is_quiet = _libs['SDDEKit'].sd_log_is_quiet
    sd_log_is_quiet.argtypes = []
    sd_log_is_quiet.restype = c_bool

# /home/mw/dev/sddekit/src/sddekit.h: 1519
if hasattr(_libs['SDDEKit'], 'sd_log_set_quiet'):
    sd_log_set_quiet = _libs['SDDEKit'].sd_log_set_quiet
    sd_log_set_quiet.argtypes = [c_bool]
    sd_log_set_quiet.restype = None

# /home/mw/dev/sddekit/src/sddekit.h: 1524
if hasattr(_libs['SDDEKit'], 'sd_log_is_verbose'):
    sd_log_is_verbose = _libs['SDDEKit'].sd_log_is_verbose
    sd_log_is_verbose.argtypes = []
    sd_log_is_verbose.restype = c_bool

# /home/mw/dev/sddekit/src/sddekit.h: 1529
if hasattr(_libs['SDDEKit'], 'sd_log_set_verbose'):
    sd_log_set_verbose = _libs['SDDEKit'].sd_log_set_verbose
    sd_log_set_verbose.argtypes = [c_bool]
    sd_log_set_verbose.restype = None

sd_err_handler_fp = CFUNCTYPE(UNCHECKED(None), c_int, String, c_int, String, String) # /home/mw/dev/sddekit/src/sddekit.h: 1565

# /home/mw/dev/sddekit/src/sddekit.h: 1570
if hasattr(_libs['SDDEKit'], 'sd_err_default_handler'):
    sd_err_default_handler = _libs['SDDEKit'].sd_err_default_handler
    sd_err_default_handler.argtypes = [c_int, String, c_int, String, String]
    sd_err_default_handler.restype = None

# /home/mw/dev/sddekit/src/sddekit.h: 1575
if hasattr(_libs['SDDEKit'], 'sd_err_get_handler'):
    sd_err_get_handler = _libs['SDDEKit'].sd_err_get_handler
    sd_err_get_handler.argtypes = []
    sd_err_get_handler.restype = sd_err_handler_fp

# /home/mw/dev/sddekit/src/sddekit.h: 1582
if hasattr(_libs['SDDEKit'], 'sd_err_set_handler'):
    sd_err_set_handler = _libs['SDDEKit'].sd_err_set_handler
    sd_err_set_handler.argtypes = [sd_err_handler_fp]
    sd_err_set_handler.restype = None

# /home/mw/dev/sddekit/src/sddekit.h: 1587
if hasattr(_libs['SDDEKit'], 'sd_err_handler'):
    sd_err_handler = _libs['SDDEKit'].sd_err_handler
    sd_err_handler.argtypes = [c_int, String, c_int, String, String]
    sd_err_handler.restype = None

sd_rng = struct_sd_rng # /home/mw/dev/sddekit/src/sddekit.h: 112

sd_hfill = struct_sd_hfill # /home/mw/dev/sddekit/src/sddekit.h: 159

sd_hist = struct_sd_hist # /home/mw/dev/sddekit/src/sddekit.h: 197

sd_sys_in = struct_sd_sys_in # /home/mw/dev/sddekit/src/sddekit.h: 458

sd_sys_out = struct_sd_sys_out # /home/mw/dev/sddekit/src/sddekit.h: 462

sd_sys = struct_sd_sys # /home/mw/dev/sddekit/src/sddekit.h: 470

sd_sys_exc = struct_sd_sys_exc # /home/mw/dev/sddekit/src/sddekit.h: 533

sd_net = struct_sd_net # /home/mw/dev/sddekit/src/sddekit.h: 649

sd_out = struct_sd_out # /home/mw/dev/sddekit/src/sddekit.h: 872

sd_out_file = struct_sd_out_file # /home/mw/dev/sddekit/src/sddekit.h: 913

sd_out_mem = struct_sd_out_mem # /home/mw/dev/sddekit/src/sddekit.h: 964

sd_out_tee = struct_sd_out_tee # /home/mw/dev/sddekit/src/sddekit.h: 1035

sd_out_tavg = struct_sd_out_tavg # /home/mw/dev/sddekit/src/sddekit.h: 1096

sd_out_sfilt = struct_sd_out_sfilt # /home/mw/dev/sddekit/src/sddekit.h: 1152

sd_sch = struct_sd_sch # /home/mw/dev/sddekit/src/sddekit.h: 1234

sd_sol = struct_sd_sol # /home/mw/dev/sddekit/src/sddekit.h: 1349

# No inserted files

